// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render 1`] = `
<Button__StyledButton
  color="grey"
  disabled={false}
  onClick={[MockFunction]}
  type="button"
/>
`;

exports[`<Button /> should render with children 1`] = `
<Button__StyledButton
  color="grey"
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  <span>
    <span>
      Test
    </span>
  </span>
</Button__StyledButton>
`;

exports[`<Button /> should render with icon 1`] = `
<Button__StyledButton
  color="grey"
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  <Icon
    faStyle="fas"
    fixedWidth={false}
    name="folder"
  />
</Button__StyledButton>
`;

exports[`<Button /> should render with tooltip 1`] = `
<Tooltip
  position="top"
  tip="Tooltip"
>
  <Button__StyledButton
    color="grey"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  />
</Tooltip>
`;

exports[`<Button /> should render with tooltip using tipPlacement prop 1`] = `
<Tooltip
  position="top"
  tip="Tooltip"
>
  <Button__StyledButton
    color="grey"
    disabled={false}
    onClick={[MockFunction]}
    type="button"
  />
</Tooltip>
`;
